from sqlalchemy import Column, Integer, String, Date, DateTime, Float, Text, ForeignKey
from sqlalchemy.sql import func
from database import Base


class User(Base):
    __tablename__ = "users"

    id = Column(Integer, primary_key=True, index=True)
    email = Column(String, unique=True, index=True, nullable=False)
    password_hash = Column(String, nullable=False)
    role = Column(String, nullable=False)
    first_name = Column(String, nullable=False)
    last_name = Column(String, nullable=False)
    phone = Column(String, nullable=True)
    gender = Column(String, nullable=True)
    city = Column(String, nullable=True)
    address = Column(Text, nullable=True)
    subscription = Column(String, default="basic")
    is_active = Column(Integer, default=1)
    created_at = Column(DateTime, server_default=func.now())


class Patient(Base):
    __tablename__ = "patients"

    id = Column(Integer, primary_key=True, index=True)
    user_id = Column(Integer, ForeignKey("users.id"), unique=True)
    date_of_birth = Column(Date, nullable=True)
    blood_group = Column(String, nullable=True)
    allergies = Column(Text, nullable=True)
    skin_conditions = Column(Text, nullable=True)


class DermatologyProfile(Base):
    __tablename__ = "dermatology_profiles"

    id = Column(Integer, primary_key=True, index=True)
    user_id = Column(Integer, ForeignKey("users.id"), unique=True, nullable=False)
    skin_conditions = Column(Text, nullable=True)
    drug_allergies = Column(Text, nullable=True)
    current_treatments = Column(Text, nullable=True)
    skin_type = Column(String, nullable=True)
    fitzpatrick_phototype = Column(String, nullable=True)
    chronic_diseases = Column(Text, nullable=True)
    family_history = Column(Text, nullable=True)
    smoking_alcohol = Column(String, nullable=True)
    occupational_exposure = Column(Text, nullable=True)
    created_at = Column(DateTime, server_default=func.now())
    updated_at = Column(DateTime, onupdate=func.now())


class Doctor(Base):
    __tablename__ = "doctors"

    id = Column(Integer, primary_key=True, index=True)
    user_id = Column(Integer, ForeignKey("users.id"), unique=True)
    medical_license = Column(String, unique=True, nullable=False)
    specialization = Column(String, nullable=False)
    years_of_experience = Column(Integer, nullable=True)
    cabinet = Column(String, nullable=True)
    rating = Column(Float, default=0.0)


class Receptionist(Base):
    __tablename__ = "receptionists"

    id = Column(Integer, primary_key=True, index=True)
    user_id = Column(Integer, ForeignKey("users.id"), unique=True)
    employee_id = Column(String, unique=True, nullable=False)
    department = Column(String, nullable=True)
    shift = Column(String, default="morning")


class Admin(Base):
    __tablename__ = "admins"

    id = Column(Integer, primary_key=True, index=True)
    user_id = Column(Integer, ForeignKey("users.id"), unique=True)
    admin_code = Column(String, nullable=False)
    admin_level = Column(String, nullable=False)


class Nurse(Base):
    __tablename__ = "nurses"

    id = Column(Integer, primary_key=True, index=True)
    user_id = Column(Integer, ForeignKey("users.id"), unique=True)
    employee_id = Column(String, unique=True, nullable=False)
    department = Column(String, nullable=True)
    shift = Column(String, default="morning")
    specialization = Column(String, nullable=True)


class Appointment(Base):
    __tablename__ = "appointments"

    id = Column(Integer, primary_key=True, index=True)
    patient_id = Column(Integer, ForeignKey("users.id"), nullable=False)
    doctor_id = Column(Integer, ForeignKey("users.id"), nullable=False)
    appointment_date = Column(Date, nullable=False)
    appointment_time = Column(String, nullable=False)
    reason = Column(Text, nullable=True)
    status = Column(String, default="scheduled")
    priority = Column(String, default="normal")
    created_at = Column(DateTime, server_default=func.now())


class Triage(Base):
    __tablename__ = "triage"

    id = Column(Integer, primary_key=True, index=True)
    patient_nom = Column(String, nullable=False)
    patient_age = Column(Integer, nullable=True)
    patient_sexe = Column(String, nullable=True)
    symptomes = Column(Text, nullable=False)
    niveau_urgence = Column(String, nullable=False)
    confiance = Column(Float, nullable=False)
    action = Column(String, nullable=False)
    couleur = Column(String, nullable=False)
    source = Column(String, nullable=False)
    keyword_p1 = Column(String, nullable=True)
    has_image = Column(Integer, default=0)
    score_p1 = Column(Float, default=0.0)
    score_p2 = Column(Float, default=0.0)
    score_p3 = Column(Float, default=0.0)
    score_p4 = Column(Float, default=0.0)
    status = Column(String, default="en_attente")
    admission_directe = Column(Integer, default=0)
    created_at = Column(DateTime, server_default=func.now())


class ChatMessage(Base):

    __tablename__ = "chat_messages"

    id = Column(Integer, primary_key=True, index=True)
    user_id = Column(Integer, ForeignKey("users.id"), nullable=False)
    message = Column(Text, nullable=False)
    response = Column(Text, nullable=False)
    created_at = Column(DateTime, server_default=func.now())